# sqlay

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dprint.json
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/actions/setup-dprint/: action.yml
.github/actions/setup-node/: action.yml
.github/workflows/: README.md  _format-check.yml  _mysql-integration.yml  _rust-check.yml  _typescript-generated-check.yml  on_pull_request_format-check.yml  on_push_format-check.yml
crates/adapters/src/: config_jsonc.rs  dialect_mysql.rs  metadata_mysql_sqlx.rs  output_fs.rs  source_fs.rs  target_typescript.rs
crates/adapters/tests/: mysql_fixture_metadata.rs  sqlay_invalid_fixtures.rs  sqlcomp_invalid_fixtures.rs
crates/app/src/: compile.rs  lib.rs  ports.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  help.rs  (+2 more)
docs/: architecture.md  current-scope.md  mvp.md  vision.md
docs/adr/: 0001-use-mysql-8-for-mvp.md  0002-use-typescript-target-generator-first.md  0003-use-hjson-sqlcomp-comments.md  0004-limit-mvp-to-query-only-select.md  0005-do-not-transform-generated-names.md  0010-define-initial-mysql-mutation-builder-support.md  0011-define-repeat-for-variable-length-sql-repetition.md  0012-define-configurable-typescript-type-mapping-overrides.md  0013-define-machine-readable-cli-format-output.md
examples/bookstore/: README.md  assert-generated-surface.ts
fixtures/sql/: README.md  assert-generated-surface.ts
script/: check-mysql-fixtures.sh
src/: main.rs
tests/: cli_binary.rs
tests/cli_binary/: compile.rs  help.rs
(+34 files in other folders)
