[package]
name = "sqlcomp"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "SQL Compose & Compile CLI."
repository = "https://github.com/tanaka-takuto/sqlcomp"
readme = "README.md"
keywords = ["codegen", "mysql", "sql", "typescript"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[dependencies]
